stryker/Metadata/unpackaged/objects/Payments__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>faculty</label>
        <referenceTo>faculty__c</referenceTo>
        <relationshipLabel>payments</relationshipLabel>
        <relationshipName>payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>p_id__c</fullName>
        <displayFormat>P_id-{000}</displayFormat>
        <label>p_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>s_no__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>s.no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>payments</relationshipLabel>
        <relationshipName>payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P_id-{00000}</displayFormat>
        <label>Payments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>